Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-23339

innodb_force_recovery=2 may still abort the rollback of recovered transactions

    XMLWordPrintable

Details

    Description

      The fix of MDEV-21217 is incomplete. As observed in MDEV-22889, a condition in trx_rollback_resurrected() is wrongly referring to !srv_is_being_started instead of the proper condition srv_shutdown_state != SRV_SHUTDOWN_NONE. As a result, the recovered transaction would remain in its incomplete state, holding record and table locks and conflicting with any new transactions that may be started.

      The purge of transaction history is not affected by this bug, because it will be disabled by innodb_force_recovery=2.

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              marko Marko Mäkelä
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1.5h
                  1.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.