MDEV-23339 innodb_force_recovery=2 may still abort the rollback of recovered transactions

trx_rollback_active(), trx_rollback_resurrected(): Replace
an incorrect condition that we failed to replace in
commit b68f1d847f1fc00eed795e20162effc8fbc4119b (MDEV-21217).